Fixed subpixel drawing issue with firefox (mozilla?) by expanding the drawing image to nearest pixel

--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>TileViewer jQuery Plugin</title>
-    <link rel="stylesheet" href="all.css" type="text/css" media="all"  />
-
     <script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
-    <script src="jquery.mousewheel.js"></script>
+    <script src="http://tileviewer.googlecode.com/files/jquery.mousewheel.js"></script>
+<!--
+    <script src="http://tileviewer.googlecode.com/files/jquery.tileviewer.js"></script>
+    <link rel="stylesheet" href="http://tileviewer.googlecode.com/files/jquery.tileviewer.css" type="text/css" media="all"  /> 
+-->
 
-    <script src="jquery.tileviewer.js"></script>
-    <link rel="stylesheet" href="jquery.tileviewer.css" type="text/css" media="all"  />
+    <link rel="stylesheet" href="jquery.tileviewer.css" type="text/css" media="all"  /> 
+    <link rel="stylesheet" href="all.css" type="text/css" media="all"  /> 
+    <script src="jquery.tileviewer.js"></script> 
+
 </head>
 <body>
 
