renamed to style.css

--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <link rel="stylesheet" href="https://raw.github.com/soichih/TileViewer/master/web/jquery.tileviewer.css" type="text/css" media="all"  /> 
-<style>
-body {
-margin-left: 50px;
-}
-.pan {
-text-decoration: underline;
-cursor: pointer;
-}
-table {
-border-collapse: collapse;
-}
-table td {
-vertical-align: top;
-}
-</style>
-
+<link rel="stylesheet" href="https://raw.github.com/soichih/TileViewer/master/web/style.css" type="text/css" media="all"  /> 
 </head>
 <body>
     <h1>TileViewer Demo</h1>
