fixed sizing issue

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css" type="text/css" media="all"  />
-<title>TileViewer Demo</title>
+<title>Local Demo</title>
 </head>
 <body>
     <h1>TileView Demo</h1>
